--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,15 @@ node_js: 4.4
 script:
 - npm run lint
 - npm test
+before_install:
+- openssl aes-256-cbc -K $encrypted_a54f2f7dd08e_key -iv $encrypted_a54f2f7dd08e_iv
+  -in .env.enc -out .env -d
 env:
   global:
   - CF_APP=text-bot
   - CF_API=https://api.ng.bluemix.net
   - CF_ORGANIZATION=skitid@us.ibm.com
   - CF_SPACE=dev
-  matrix:
-    secure: BSXiEZSVKH9pUCK37gh4ARcfh63nF2zfpz/E/R3wMMzQcQ/WC+jWHk8GC3wwN+inqmmN393d4OHVFMZt/Bxb7omgn09p6ouLumGyfuKrRJfzT3QQ6eHK2fEqd7/7/l8d+H4wzzr9RNFwdZWV57v1zH/CHPLUda2QMKWWMwsEU9Q=
 before_deploy: npm install -g cf-blue-green
 deploy:
   provider: script
@@ -24,5 +25,3 @@ deploy:
     branch: master
     repo: watson-developer-cloud/text-bot
   skip_cleanup: true
-notifications:
-  email: false
