Fixed WEATHER_URL, Cloudant Plan, README Instructions

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,10 @@ CONVERSATION_PASSWORD=
 WORKSPACE_ID=
 
 #WEATHER
-WEATHER_URL=https://api.weather.com
+WEATHER_URL=https://twcservice.mybluemix.net/api/weather
 WEATHER_USERNAME=
 WEATHER_PASSWORD=
-# WEATHER_API_KEY=
+
 
 #CLOUDANT
 CLOUDANT_URL=
