migrated from alchemy to NLU

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 USE_WEBUI=true
-ALCHEMY_API_KEY=
+NATURAL_LANGUAGE_UNDERSTANDING_USERNAME=
+NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD=
 
 #CONVERSATION
 CONVERSATION_URL=https://gateway.watsonplatform.net/conversation/api
